🔧 JAVA COMPILATION FIXES COMPLETE
RESOLVED:
- Fixed duplicate case label for STOPPED in GuthildaAiOrchestrator switch statement
- Added missing STOPPING status to ServerStatus enum
- Fixed ExecutorService/ScheduledExecutorService mismatches in SequentialThinkingServer and MachineLearningEngine
- Added missing ServerStatus cases in AbstractMcpServer switch expression (DEGRADED, MAINTENANCE, etc.)
- Fixed Map.builder() usage in MachineLearningEngine to use HashMap with Map.copyOf()
- Updated ServerType test to match actual enum values
- Added missing HashMap import

STATUS:
✅ All Java modules compile successfully (mvn clean compile)
⚠️  Test compilation has issues with outdated ServerConfig constructors and missing enum values
🎯 Ready for next phase of Universal Maritime Orchestration Framework implementation

TECHNICAL DETAILS:
- Fixed 8+ Java compilation errors across mcp-guthilda, mcp-shared, mcp-servers, mcp-ai-integration
- Updated enums and switch expressions for full case coverage
- Corrected virtual thread executor usage patterns
- Validated with dev-tools Java 21 and Maven 3.9.9